--- a/PocketChef/wear/src/main/res/values/strings.xml
+++ b/PocketChef/wear/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">PocketChef</string>
-    <string name="hello_world">Hello World!</string>
+    <string name="title">Pocket Chef</string>
 </resources>
